Quita cajas rojas de hyperref

--- a/Practica 1/doc/P1-Aguilera-Balderas.tex
+++ b/Practica 1/doc/P1-Aguilera-Balderas.tex
@@ -1,7 +1,7 @@
 \input{preambuloSimple.tex}
 \graphicspath{ {./images/} }
 \usepackage{subcaption}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{soul}
 
 
