Corrigiendo errata y añadiendo detalle

--- a/Practica 1/doc/P1-Aguilera-Balderas.tex
+++ b/Practica 1/doc/P1-Aguilera-Balderas.tex
@@ -1,7 +1,7 @@
 \input{preambuloSimple.tex}
 \graphicspath{ {./images/} }
 \usepackage{subcaption}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{soul}
 
 
@@ -47,7 +47,7 @@ A pesar de no ser un problema de planificación al uso (tal y como vemos en las 
 
 \section{Planificación a alto nivel}
 
-El mundo de Boulder Chase se encuadra en un mapa con los bordes delimitados por muros y, en su interior, encontraremos casillas vacías, con rocas, tierra, enemigos, gemas y un portal. Si jugáramos manualmente, nuestro criterio nos conduciría a elegir como objetivo aquellas gemas más cercanas en las que se garantiza, de una manera u otra, que los enemigos no nos alcanzan. Además, teniendo en cuenta que el avatar tiene la capacidad de mover piedras, podríamos explorar nuevas zonas del mapa (a priori inaccesibles) para así coger gemas extra. Cuando la barra de objetivos se completa (con 9-10 gemas), el avatar debe escapar por el portal para completar el mapa. Todo ello se debe conseguir con dos restricciones de tiempo: la primera es que se tienen 2000 ticks para completar el mapa; la segunda es que cada acción debe llevarse a cabo en menos de 20ms. De la segunda restricción nos ocuparemos más adelante. Por el momento, debemos establecer un criterio de elección de gemas para ser completado en menos de 2000 ticks.  \\
+El mundo de Boulder Chase se encuadra en un mapa con los bordes delimitados por muros y, en su interior, encontraremos casillas vacías, con rocas, tierra, enemigos, gemas y un portal. Si jugáramos manualmente, nuestro criterio nos conduciría a elegir como objetivo aquellas gemas más cercanas en las que se garantiza, de una manera u otra, que los enemigos no nos alcanzan. Además, teniendo en cuenta que el avatar tiene la capacidad de mover piedras, podríamos explorar nuevas zonas del mapa (a priori inaccesibles) para así coger gemas extra. Cuando la barra de objetivos se completa (con 9-10 gemas), el avatar debe escapar por el portal para completar el mapa. Todo ello se debe conseguir con dos restricciones de tiempo: la primera es que se tienen 2000 ticks para completar el mapa; la segunda es que cada acción debe llevarse a cabo en menos de 40 ms. De la segunda restricción nos ocuparemos más adelante. Por el momento, debemos establecer un criterio de elección de gemas para ser completado en menos de 2000 ticks.  \\
 
 Teniendo todo esto en mente, nuestro avatar establece una prioridad entre la gemas en función de los siguientes aspectos:
 
@@ -82,7 +82,7 @@ Teniendo en mente los casos en los que contemplamos mover piedras, el avatar con
 
 \subsection{Gemas y contacto con enemigos}
 
-Cuando ya no quedan gemas fáciles y se han obtenido todas las gemas con rocas descritas en la sección anterior, sólo queda lidiar con enemigos. En los apartados anteriores, el avatar no podía generar caminos que pasaran por entornos de enemigos (la planificación a bajo nivel señalaba que esas casillas eran inaccesibles) de forma que se establecía un 'cordón sanitario' alrededor de los enemigos. Así, al planificación a bajo nivel no encontraba ningún camino que diera acceso a gemas con riesgo de enemigo. Cuando ya no quedan más gemas de los apartados anteriores, ese cordón se deshabilita de forma que ya si existan caminos. El éxito en este caso pasa por diseñar un buen sistema que permita al avatar esquivar a los enemigos. Nosotros hemos desarrollado dos estrategias (una de ellas reactiva) y una forma concreta de vigilar el entorno. Serán explicadas en la siguiente sección.
+Cuando ya no quedan gemas fáciles y se han obtenido todas las gemas con rocas descritas en la sección anterior, sólo queda lidiar con enemigos. En los apartados anteriores, el avatar no podía generar caminos que pasaran por entornos de enemigos (la planificación a bajo nivel señalaba que esas casillas eran inaccesibles) de forma que se establecía un 'cordón sanitario' alrededor de los enemigos. Así, la planificación a bajo nivel no encontraba ningún camino que diera acceso a gemas con riesgo de enemigo. Cuando ya no quedan más gemas de los apartados anteriores, ese cordón se deshabilita de forma que ya si existan caminos. El éxito en este caso pasa por diseñar un buen sistema que permita al avatar esquivar a los enemigos. Nosotros hemos desarrollado dos estrategias (una de ellas reactiva) y una forma concreta de vigilar el entorno. Serán explicadas en la siguiente sección.
 
 \section{Planificación a bajo nivel}
 
@@ -90,7 +90,7 @@ La planificación a bajo nivel se encarga de encontrar los caminos a las gemas d
 
 \subsection{Construcción de caminos con $A^*$}
 
-$A^*$ es el algoritmo utilizado por antonomasia para resolver problemas heurísticos. En este caso, a través de la distancia Manhattan, conseguimos encontrar el camino óptimo (minimizando la distancia). Sin embargo, retomando la restricción temporal de 20 ms por acción, $A^*$ podría tardar demasiado en encontrar el camino entre dos casillas. Por este motivo, hemos contemplado la posibilidad de almacenar el estado del algoritmo (lista de nodos abiertos y cerrados, nodo actual) cuando se sobrepasa un tiempo determinado, devolver una acción nula y continua el procedimiento en el siguiente turno. Así, en un número finito de turnos, se calcularía un camino óptimo. Otra opción sería calcular caminos óptimos parciales, aunque experimentalmente hemos determinado que el comportamiento es mucho más errático. Por otra parte, una buena implementación, usando estructuras de datos convenientes y métodos eficientes de comparación de nodos (vía \textit{hashCode}) hace que prácticamente siempre se encuentren los caminos completos en un único turno. Hay que tener en cuenta que $A^*$ considera que una casilla es accesible si no cumple:
+$A^*$ es el algoritmo utilizado por antonomasia para resolver problemas heurísticos. En este caso, a través de la distancia Manhattan, conseguimos encontrar el camino óptimo (minimizando la distancia). Sin embargo, retomando la restricción temporal de 40 ms por acción, $A^*$ podría tardar demasiado en encontrar el camino entre dos casillas. Por este motivo, hemos contemplado la posibilidad de almacenar el estado del algoritmo (lista de nodos abiertos y cerrados, nodo actual) cuando se sobrepasa un tiempo determinado, devolver una acción nula y continua el procedimiento en el siguiente turno. Así, en un número finito de turnos, se calcularía un camino óptimo. Otra opción sería calcular caminos óptimos parciales, aunque experimentalmente hemos determinado que el comportamiento es mucho más errático. Por otra parte, una buena implementación, usando estructuras de datos convenientes y métodos eficientes de comparación de nodos (vía \textit{hashCode}) hace que prácticamente siempre se encuentren los caminos completos en un único turno. Hay que tener en cuenta que $A^*$ considera que una casilla es accesible si no cumple:
 
 \begin{enumerate}
 	\item La casilla es un muro
@@ -133,6 +133,6 @@ Cuando $A^*$ construye un camino, el avatar lo recorre fielmente. Si hay un enem
 	\label{fig:orientación-abaj}
 \end{figure}
 
-Una vez detectada la presencia de un enemigo en el cono de visión, se produce el conjunto de acciones para esquivar. El comportamiento es aleatorio. Más de un 75\% de las veces, el avatar escapa hacia el punto de inicio, el portal o el punto más alejado de los dos anteriores. Con menos de un 25\% de probabilidad, buscamos una casilla accesible que maximiza la distancia al enemigo más cercano. De esta manera, conseguimos alejarnos y, a la vez, abrimos mapa de forma que el enemigo pueda moverse y no permanezca siempre en el mismo entorno. Así, es posible conseguir vía libre hacia las gemas que antes estaban inaccesibles por la presencia del enemigo. Además, si en el camino de huida encontrara otro enemigo, no tendría sentido volver a activar el mismo comportamiento de huida. Por este motivo, hemos desarrollado también un comportamiento reactivo en el que el avatar se mueve en sentido contrario al movimiento que venía realizando (por ejemplo, si caminaba hacia a la izquierda, el comportamiento reactivo introduce en la lista de acciones dos nuevas: derecha y derecha, generando el cambio de sentido y el paso atrás).
+Una vez detectada la presencia de un enemigo en el cono de visión, se produce el conjunto de acciones para esquivar. El comportamiento es aleatorio. Más de un 75\% de las veces, el avatar escapa hacia el punto de inicio, el portal o el punto más alejado de los dos anteriores. Con menos de un 25\% de probabilidad, buscamos una casilla accesible que maximiza la distancia al enemigo más cercano. De esta manera, conseguimos alejarnos y, a la vez, abrimos mapa de forma que el enemigo pueda moverse y no permanezca siempre en el mismo entorno. Puede darse el caso, incluso, de que dos enemigos del mismo tipo (murciélago o escorpión) interaccionen entre sí, eliminándose y generando una nueva gema. Por tanto, resulta muy interesante facilitarles el movimiento por todo el mapa, aumentando la probabilidad de que se autodestruyan. Así, es posible conseguir vía libre hacia las gemas que antes estaban inaccesibles por la presencia del enemigo. Además, si en el camino de huida encontrara otro enemigo, no tendría sentido volver a activar el mismo comportamiento de huida. Por este motivo, hemos desarrollado también un comportamiento reactivo en el que el avatar se mueve en sentido contrario al movimiento que venía realizando (por ejemplo, si caminaba hacia a la izquierda, el comportamiento reactivo introduce en la lista de acciones dos nuevas: derecha y derecha, generando el cambio de sentido y el paso atrás).
 
 \end{document}
