Corregido error menor en el tex

--- a/Practica 1/doc/P1-Aguilera-Balderas.tex
+++ b/Practica 1/doc/P1-Aguilera-Balderas.tex
@@ -133,6 +133,6 @@ Cuando $A^*$ construye un camino, el avatar lo recorre fielmente. Si hay un enem
 	\label{fig:orientación-abaj}
 \end{figure}
 
-Una vez detectada la presencia de un enemigo en el cono de visión, se produce el conjunto de acciones para esquivar. El comportamiento es aleatorio. Más de un 75\% de las veces, el avatar escapa hacia el punto de inicio, el portal o el punto más alejado de los dos anteriores. Con menos de un 25\% de probabilidad, buscamos una casilla accesible que maximiza la distancia al enemigo más cercano. De esta manera, conseguimos alejarnos y, a la vez, abrimos mapa de forma que el enemigo pueda moverse y no permanezca siempre en el mismo entorno. Puede darse el caso, incluso, de que dos enemigos del mismo tipo (murciélago o escorpión) interaccionen entre sí, eliminándose y generando una nueva gema. Por tanto, resulta muy interesante facilitarles el movimiento por todo el mapa, aumentando la probabilidad de que se autodestruyan. Así, es posible conseguir vía libre hacia las gemas que antes estaban inaccesibles por la presencia del enemigo. Además, si en el camino de huida encontrara otro enemigo, no tendría sentido volver a activar el mismo comportamiento de huida. Por este motivo, hemos desarrollado también un comportamiento reactivo en el que el avatar se mueve en sentido contrario al movimiento que venía realizando (por ejemplo, si caminaba hacia a la izquierda, el comportamiento reactivo introduce en la lista de acciones dos nuevas: derecha y derecha, generando el cambio de sentido y el paso atrás).
+Una vez detectada la presencia de un enemigo en el cono de visión, se produce el conjunto de acciones para esquivar. El comportamiento es aleatorio. Más de un 75\% de las veces, el avatar escapa hacia el punto de inicio, el portal o el punto más alejado de los dos anteriores. Con menos de un 25\% de probabilidad, buscamos una casilla accesible que maximiza la distancia al enemigo más cercano. De esta manera, conseguimos alejarnos y, a la vez, abrimos mapa de forma que el enemigo pueda moverse y no permanezca siempre en el mismo entorno. Puede darse el caso, incluso, de que dos enemigos de distinto tipo (murciélago o escorpión) interaccionen entre sí, eliminándose y generando una nueva gema. Por tanto, resulta muy interesante facilitarles el movimiento por todo el mapa, aumentando la probabilidad de que se autodestruyan. Así, es posible conseguir vía libre hacia las gemas que antes estaban inaccesibles por la presencia del enemigo. Además, si en el camino de huida encontrara otro enemigo, no tendría sentido volver a activar el mismo comportamiento de huida. Por este motivo, hemos desarrollado también un comportamiento reactivo en el que el avatar se mueve en sentido contrario al movimiento que venía realizando (por ejemplo, si caminaba hacia a la izquierda, el comportamiento reactivo introduce en la lista de acciones dos nuevas: derecha y derecha, generando el cambio de sentido y el paso atrás).
 
 \end{document}
